Added completed client program and addressBookType functions.

--- a/WHicks_AddressBook.vcxproj.filters
+++ b/WHicks_AddressBook.vcxproj.filters
@@ -52,6 +52,8 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="..\..\..\Downloads\AddressBookData.txt" />
+    <Text Include="..\..\..\Downloads\AddressBookData.txt">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
